--- a/meson.build
+++ b/meson.build
@@ -30,6 +30,14 @@ d1p2 = executable(
   install: true)
 run_target('day1_p2', command: [d1p2, '../data/day1.txt'])
 
+d2p1 = executable(
+  'd2p1',
+  'day2_p1.c',
+  c_args: c_args,
+  dependencies: dependencies,
+  install: true)
+run_target('day2_p1', command: [d2p1, '../data/day2.txt'])
+
 run = executable(
   'AOC25',
   'aoc25.c',
